additional undecided check in TypeModIndyAnalyzerImpl linkedVariables, 15 failing